--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
+  schedule: # Every sunday at 00:00 UTC
+    - cron: '0 0 * * 0'
 
 env:
   REGISTRY: ghcr.io
